# S2Gpp

./: .dockerignore  .env  .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  Makefile  Python.Dockerfile  README.md  entrypoint.sh  manifest.json  pyproject.toml  requirements.txt  start_docker.sh  tasks.sh
data/: cluster-test-data.csv  paper.csv  test.csv  ts_0.csv  ts_0.csv.scores
s2gpp/: __init__.py
scripts/: compare-intermediate-outputs.sh  plot_contributions.py  release_start_s2gpp.sh  run_scalability_main.sh  run_scalability_sub.sh  start_s2gpp.sh  start_s2gpp_main.sh  start_s2gpp_sub.sh  start_timeeval.sh
src/: cluster_listener.rs  data.rs  lib.rs  main.rs  messages.rs  parameters.rs  python_binding.rs  tests.rs
src/data_manager/: messages.rs  mod.rs  tests.rs
src/data_manager/data_reader/: messages.rs  mod.rs  receiver.rs  tests.rs
src/data_manager/phase_spacer/: mod.rs  tests.rs
src/data_manager/preprocessor/: helper.rs  messages.rs  mod.rs
src/data_manager/reference_dataset_builder/: mod.rs  tests.rs
src/data_manager/stats_collector/: messages.rs  minmax.rs  mod.rs  std.rs  tests.rs
src/data_reader/: messages.rs  mod.rs  receiver.rs  tests.rs
src/data_store/: index.rs  intersection.rs  materialize.rs  mod.rs  point.rs  tests.rs  utils.rs
src/data_store/edge/: materialized.rs  mod.rs
src/data_store/intersection/: materialized.rs  mod.rs
src/data_store/node/: independent.rs  mod.rs
src/data_store/node_questions/: mod.rs  node_in_question.rs
src/data_store/transition/: materialized.rs  mod.rs
src/interface/: mod.rs  sink.rs  tests.rs
src/meanshift/: helper.rs  messages.rs  mod.rs  tests.rs
src/pca/: messages.rs  mod.rs  rotator.rs  tests.rs
src/pca/tests/: cluster_listener.rs  mod.rs
src/tests/: mod.rs  utils.rs
src/training/: messages.rs  mod.rs  segmenter.rs
src/training/anomaly_contribution/: messages.rs  mod.rs  tests.rs
src/training/edge_estimation/: edges_orderer.rs  helper.rs  messages.rs  mod.rs  tests.rs
src/training/graph_creation/: messages.rs  mod.rs  tests.rs
src/training/intersection_calculation/: data_structures.rs  helper.rs  messages.rs  mod.rs  tests.rs
src/training/node_estimation/: data_structures.rs  messages.rs  mod.rs  tests.rs
src/training/node_estimation/multi_kde/: gaussian_kde.rs  gaussian_kernel_estimate.rs  mod.rs
src/training/node_estimation/multi_kde/actors/: gaussian_kde.rs  helper.rs  messages.rs  mod.rs  tests.rs
src/training/rotation/: messages.rs  mod.rs  tests.rs
src/training/rotation/pca/: helper.rs  messages.rs  mod.rs  tests.rs
src/training/rotation/pca/tests/: cluster_listener.rs  mod.rs
src/training/scoring/: helper.rs  messages.rs  mod.rs  overlap.rs  tests.rs  weights.rs
src/training/segmentation/: data_structures.rs  messages.rs  mod.rs  tests.rs
src/training/segmenter/: data_structures.rs  mod.rs  tests.rs
src/training/transposition/: messages.rs  mod.rs  tests.rs
src/utils/: console_logger.rs  direct_protocol.rs  float_approx.rs  geometry.rs  graphs.rs  helper_protocol.rs  itertools.rs  mod.rs  ndarray_extensions.rs  pop_clear.rs  rotation_protocol.rs
src/utils/logging/: console_logger.rs  mod.rs  progress_bar.rs
src/utils/ndarray_extensions/: boolean.rs  index_arr.rs  mod.rs  shift.rs  softmax.rs  stack.rs
