[package]
name = "s2gpp"
version = "0.6.0"
authors = ["Phillip Wenig <phillip.wenig@hpi.de>"]
edition = "2018"

[profile.release]
panic = "abort"

[dev-dependencies]
actix-rt = "2.2.0"
port_scanner = "0.1.5"
rayon = "1.5.0"
tokio = { version = "1.12", features = ["sync"] }

[dependencies]
log = "0.4"
env_logger = "0.9.0"
structopt = "0.3"
indicatif = "0.16.2"
console = "0.15.0"

actix = "=0.12.0"
actix-telepathy = "=0.4.1"
actix-broker = "0.4.1"
serde = "1.0"
serde_with = "1.9.1"
ndarray = { version = "0.14", features = ["serde"] }
ndarray-linalg = { version = "0.13",  features = ["openblas-static"] }
ndarray_einsum_beta = "0.7.0"
ndarray-stats = "0.4"
csv = "1.1.6"
kdtree = "0.6.0"
num-traits = "0.2.14"
num-integer = "0.1.44"
sortedvec = "0.5.0"
anyhow = "1.0.41"
indexmap = "1.8"
itertools = "0.10.3"

meanshift-rs = { git = "https://github.com/wenig/meanshift-rs.git", tag = "0.6.0" }
