[package]
name = "s2gpp"
version = "1.1.0"
authors = ["Phillip Wenig <phillip.wenig@hpi.de>"]
description = "Algorithm for Highly Efficient Detection of Correlation Anomalies in Multivariate Time Series"
license = "MIT"
edition = "2018"
documentation = "https://docs.rs/s2gpp"
homepage = "https://github.com/HPI-Information-Systems/S2Gpp"
repository = "https://github.com/HPI-Information-Systems/S2Gpp"

[package.metadata.maturin]
classifier = ["Programming Language :: Python"]
requires-dist = ["scikit-learn~=1.1"]
project-url = { homepage = "https://github.com/HPI-Information-Systems/S2Gpp", repository = "https://github.com/HPI-Information-Systems/S2Gpp" }

[profile.release]
panic = "abort"

[lib]
name = "s2gpp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "s2gpp"
path = "src/bin/s2gpp.rs"
doc = false

[features]
python = ["pyo3", "numpy"]

[dev-dependencies]
actix-rt = "2.9.0"
port_scanner = "0.1.5"
rayon = "1.8.0"

[dependencies]
log = "0.4"
env_logger = "0.10.1"
structopt = "0.3"
indicatif = "0.17.7"
console = "0.15.0"

actix = "0.13.1"
actix-telepathy = "0.6.0"
actix-broker = "0.4.3"
serde = "1.0"
serde_with = "3.4.0"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-linalg = { version = "0.16",  features = ["openblas-static"] }
ndarray_einsum_beta = "0.7.0"
ndarray-stats = "0.5"
csv = "1.1.6"
num-traits = "0.2.14"
num-integer = "0.1.44"
sortedvec = "0.5.0"
anyhow = "1.0.41"
indexmap = "2.1.0"
itertools = "0.12.0"
tokio = { version = "1.34", features = ["sync"] }
futures-sink = "0.3.21"

pyo3 = { version = "0.20", features = ["extension-module"], optional=true }
numpy = { version = "0.20", optional = true }
