[project]
name = "s2gpp"
dependencies = ["scikit-learn~=1.1"]
authors = [
  {email = "phillip.wenig@hpi.de", name = "Phillip Wenig"}
]

[project.urls]
homepage = "github.com/HPI-Information-Systems/S2Gpp"
repository = "github.com/HPI-Information-Systems/S2Gpp"

[build-system]
requires = ["maturin>=0.12,<0.14"]
build-backend = "maturin"
